Add FFTCONVOLVER_USE_SSE CMake option
Signed-off-by: Squareys <squareys@googlemail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,17 @@ project(FFTConvolver CXX)
 cmake_minimum_required(VERSION 3.12)
 
 
-set(SOURCES
+option(FFTCONVOLVER_USE_SSE "Enable SSE optimizations" OFF)
+
+# AudioFFT static library
+set(AudioFFT_SOURCES
     AudioFFT.cpp
     AudioFFT.h
+)
+add_library(AudioFFT STATIC ${AudioFFT_SOURCES})
 
+# FFTConvolver static library
+set(FFTConvolver_SOURCES
     FFTConvolver.cpp
     FFTConvolver.h
 
@@ -17,8 +24,13 @@ set(SOURCES
     Utilities.h
 )
 
-add_library(FFTConvolver STATIC ${SOURCES})
+add_library(FFTConvolver STATIC ${FFTConvolver_SOURCES})
+target_link_libraries(FFTConvolver PRIVATE AudioFFT)
+if(FFTCONVOLVER_USE_SSE)
+    target_compile_definitions(FFTConvolver PRIVATE -DFFTCONVOLVER_USE_SSE)
+endif()
 
+# Test executable
 set(Test_SOURCES
     test/Test.cpp
 )
